k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: enterprise-system-20260517-135134-cctbzc33g4j5
