k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-system-20260517-135134-cctbzc33g4j5-service
spec:
  selector:
    app: enterprise-system-20260517-135134-cctbzc33g4j5
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
